Bug #9954 mysql-4.1.11/cmd-line-utils/libedit/makelist.sh is not portable   - Changed makelist.sh   - Bump up required version of autoconf   - Use new style to init mutex in my_thr_init